--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>React</title>
+
+    <link rel="stylesheet" href="./src/css/fonts/fonts.css">
     
 </head>
 <body>
