--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>React</title>
 
     <link rel="stylesheet" href="./src/css/fonts/fonts.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/button.css">
+
     
 </head>
 <body>
