--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./src/css/fonts/fonts.css">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/button.css">
-
+    <link rel="stylesheet" href="./src/css/form.css">
     
 </head>
 <body>
