--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>React</title>
 
-    <link rel="stylesheet" href="./src/css/fonts/fonts.css">
-    <link rel="stylesheet" href="./src/css/style.css">
-    <link rel="stylesheet" href="./src/css/button.css">
-    <link rel="stylesheet" href="./src/css/form.css">
+    <link rel="stylesheet" href="../src/css/fonts/fonts.css">
+    <link rel="stylesheet" href="../src/css/style.css">
+    <link rel="stylesheet" href="../src/css/button.css">
+    <link rel="stylesheet" href="../src/css/form.css">
     
 </head>
 <body>
